fix alignment on card fields

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -63,6 +63,8 @@
 
 .pii {
   columns: 2;
+  margin-top: 0px;
+  padding-left: 20px;
   // display: inline-block; <-- attempt to display side by side with label
 }
 
